--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -6,7 +6,7 @@ app:
   # Set the build version ID to deploy for the "Build, deploy, and run" 
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
-  version: ""
+  version: "e05108be-5eb7-48b0-9316-9725f9c4005c"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
